--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Django==4.2.10
 django-allauth==0.61.1
 django-crispy-forms==2.1
 django-summernote==0.8.20.0
+djangorestframework==3.15.1
 Flask==3.0.2
 gunicorn==21.2.0
 idna==3.6
